cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_391.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/statem/statem_dtls.c:535: error: DEAD_STORE
  The value written to &i (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/statem/statem_dtls.c:535:5: Write of unused value
533.       hm_fragment *frag = NULL;
534.       pitem *item = NULL;
535.       int i = -1, is_complete;
           ^
536.       unsigned char seq64be[8];
537.       size_t frag_len = msg_hdr->frag_len;
